# audio-plugins

./: Cargo.toml  METAL_SIGNAL_CHAIN.md
.claude/: settings.local.json
delay/: Cargo.toml
delay/src/: editor.rs  lib.rs
guitar_tuner/: Cargo.toml
guitar_tuner/src/: editor.rs  lib.rs
noise_gate/: Cargo.toml
noise_gate/src/: editor.rs  lib.rs
overdrive/: Cargo.toml
overdrive/src/: editor.rs  lib.rs
pitch_shifter/: Cargo.toml
pitch_shifter/src/: editor.rs  lib.rs
presence_eq/: Cargo.toml
presence_eq/src/: editor.rs  lib.rs
reverb/: Cargo.toml
reverb/src/: editor.rs  lib.rs
xtask/: Cargo.toml
